--- a/home.css
+++ b/home.css
@@ -71,6 +71,25 @@ li a:hover{
     font-family: "Caveat", cursive;
     font-optical-sizing: auto;
     font-style: normal;
+    width: 22ch;
+    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
 }
 .paragraph{
   position: absolute;
